--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: sliding_tab_layout
 description: tabLayout
-version: 0.0.1
-homepage:
+version: 0.0.2
+#homepage:
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
